# sparsejac

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  jacrev_sparse.py  jacrev_sparse_test.py  pyproject.toml  sparsejac.py  sparsejac_test.py
.github/workflows/: build-ci.yml  release.yml
src/sparsejac/: __init__.py  sparsejac.py
tests/: test_sparsejac.py
